# mldsa_mobile

./: .gitignore  .gitmodules  CMakeLists.txt  Package.swift  build_apple.sh
.github/workflows/: build-aar.yml  build-xcframework.yml  release.yml  test.yml
android/: BUILDING.md  build.gradle  build_aar.sh  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/: README.md
android/app/src/androidTest/java/com/mldsa/: MLDSASeedTest.java  MLDSATest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  mldsa_jni.cpp
android/app/src/main/java/com/mldsa/: MLDSA.java
lib/: CMakeLists.txt  multilevel_config.h
lib/include/: mldsa_multilevel.h
lib/src/: mldsa_native_all.c  os_rng.c
objc/: CMakeLists.txt
objc/include/: MLDSA.h
objc/src/: MLDSA.m
toolchains/: ios-simulator.toolchain.cmake  ios.toolchain.cmake  macos.toolchain.cmake
